feat: add follow and like notifications
